<resources>
    <string name="app_name">BloodBank</string>
    <string name="etUserName">UserName</string>
    <string name="etPassword">Password</string>
    <string name="etAge">Age</string>
    <string name="LogIn">Log In</string>
    <string name="tvRegister">Register Now</string>
    <string name="bRegister">Register</string>
    <string name="name1">Name1</string>
    <string name="load">loading</string>
    <string name="googletitletext">google_title_text</string>
    <string name="already_registered_signin">Already Registered?SignIn</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_string_etpassword">Enter your @string/etPassword</string>
    <string name="don_t_have_account_register_here">Don\'t have account? Register here!</string>
    <string name="sign_inn">Sign In</string>
    <string name="sign_outt">Sign Out</string>
    <string name="textview">Test</string>
    <string name="admin_androidtutorialpoint_com">admin@androidtutorialpoint.com</string>
    <string name="hello_user">Hello User</string>
    <string name="signout">SignOut</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="nearby_bloodbanks">Nearby BloodBanks</string>
    <string name="string_nearby_bloodbanks" />
    <string name="nearby_bloodbankss">Nearby BloodBanks</string>
    <string name="donate">Donate</string>
    <string name="near_by_bloodbanks">Near By BloodBanks</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_world" />
    <string name="nearby_blood_banks">Nearby Blood Banks</string>
    <string name="deactivate">Deactivate</string>
    <string name="please_fill_this_form">Please fill this form:</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string-array name="gender_list">
        <item>Male </item>
        <item>Female </item>

    </string-array>
    <string-array name="blood_list">
        <item>A-</item>
        <item>A+ </item>
        <item>B-</item>
        <item>B+</item>
        <item>O-</item>
        <item>O+</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="blood_type">Blood Type:</string>
    <string name="gender">Gender:</string>
    <string-array name="medicine_list">
        <item>3 months or fewer</item>
        <item>4_6 months</item>
        <item>7_9 months</item>
        <item>9_12 months</item>
        <item>More than 12 months</item>
        <item>I don’t remember</item>
    </string-array>
    <string name="status">Status</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="no">No</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="string_togglebutton" />
    <string name="togglebutton2">ToggleButton</string>
    <string name="togglebutton3">ToggleButton</string>
    <string name="no4">No</string>
    <string name="no5">No</string>
    <string name="no6">No</string>
    <string name="no7">No</string>
    <string name="togglebutton4">ToggleButton</string>
    <string name="please_fill_out_this_form">Please fill out this form:</string>
    <string name="togglebutton7">ToggleButton</string>
    <string name="yes1">Yes</string>
    <string name="yes2">Yes</string>
    <string name="yes3">Yes</string>
    <string name="yes4">Yes</string>
    <string name="yes5">Yes</string>
    <string name="nearby_bloodbanks1">NEARBY BLOODBANKS</string>
    <string name="show_bloodbanks">Show BloodBanks</string>
    <string name="toast">New Information has been saved.</string>
    <string name="bloodbank_employee">BloodBank Employee</string>
    <string name="please_fill_the_information_below_this_questionnaire_is_a_requirement_for_donation_process_so_please_fill_it_with_proper_information">please fill the information below , this questionnaire is a requirement for donation process so please fill it with proper information.</string>
    <string name="age">Age:</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="_1_sign_up_via_your_google_account">1-Sign up via your google account.</string>
    <string name="_2__fill_out_the_medical_form_which_includes_information_about_you_in_general_and_yes_no_questions">2-Fill out the medical form which includes information about you in general and yes/no questions.</string>
    <string name="_3_based_on_the_filled_form_you_ll_receive_a_message_from_the_nearset_bloodbank_which_contains_your_scheduled_appointment_info_if_you_re_accepted_as_a_donor_or_a_sorry_message_if_you_re_rejected_as_one">3-Based on the filled form you\'ll receive a message from the nearset bloodbank which contains your scheduled appointment info if you\'re accepted as a donor, or a sorry message if you\'re rejected as one.</string>
    <string name="all_what_you_need_to_do_is">All what you need to do is:</string>
    <string name="_3_to_avoid_a_skin_rash_clean_the_area_around_the_strip_bandage_with_soap_and_water">3- To avoid a skin rash, clean the area around the strip bandage with soap and water.</string>
    <string name="_1_keep_the_strip_bandage_on_for_the_next_several_hours">1- Keep the strip bandage on for the next several hours.</string>
    <string name="_1_maintain_a_healthy_iron_level_in_your_diet_by_eating_iron_rich_foods_such_as_red_meat_fish_poultry_beans_spinach_iron_fortified_cereals_and_raisins">1- Maintain a healthy iron level in your diet by eating iron rich foods, such as red meat, fish, poultry, beans, spinach, iron-fortified cereals and raisins.</string>
    <string name="_2_get_a_good_night_s_sleep">2- Get a good night\'s sleep.</string>
    <string name="_3_if_you_are_a_platelet_donor_remember_that_your_system_must_be_free_of_aspirin_for_two_days_prior_to_donation">3- If you are a platelet donor, remember that your system must be free of aspirin for two days prior to donation.</string>
    <string name="after_your_donation">After Your Donation</string>
    <string name="before_your_donation">Before Your Donation</string>
    <string name="did_you_donate_or_receive_any_blood_products_in_the_last_3_months">Did you donate or receive any blood products in the last 3 months?</string>
    <string name="did_you_take_antibiotics_antivirals_or_antifungals_in_the_last_3_months">Did you take antibiotics, antivirals or antifungals in the last 3 months?</string>
    <string name="do_you_have_diabetes">Do you have diabetes?</string>
    <string name="for_women_are_you_pregnant_or_have_you_have_you_been_pregnant_in_the_past_12_months">For women; are you pregnant or have you have you been pregnant in the past 12 months?</string>
    <string name="have_you_had_a_tattoo_or_body_piercing_in_the_last_4_months">Have you had a tattoo or body piercing in the last 4 months?</string>
    <string name="in_the_last_3_months_have_you_had_a_vaccination">In the last 3 months have you had a vaccination?</string>
    <string name="sign_in_as_a_blood_bank">Sign In As A Blood Bank</string>
    <string name="_1_you_should_be_16_years_old_on_the_day_of_donation">1-You should be 16 years old on the day of donation.</string>
    <string name="sorry_you_e_not_allowed_to_donate_since_you_re_under_the_donors_allowed_age_to_be_able_to_donate">Sorry you\'e not allowed to donate since you\'re under the donors allowed age, to be able to donate:</string>
    <string name="_4_drink_plenty_of_fluids_before_donating">4-Drink plenty of fluids before donating.</string>
    <string name="_3_eating_well_balanced_meal_before_donation">3-Eating well balanced meal before donation .</string>
    <string name="_2_should_weight_atleast_55kg_on_the_day_of_donation_for_16_years_old_donors_and_50kg_for_older">2-Should weight atleast 55KG on the day of donation for 16 years old donors , and 50KG for older.</string>
</resources>