<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lujainalfalaileh.bloodbank.UserReqShow"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/MyCustomTheme"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="345dp"
        android:layout_height="363dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bResponse"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolb"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_diabetes"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/text11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_the_last_3_months_have_you_had_a_vaccination"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/text22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/did_you_donate_or_receive_any_blood_products_in_the_last_3_months"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="290dp" />

        <TextView
            android:id="@+id/text33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/did_you_take_antibiotics_antivirals_or_antifungals_in_the_last_3_months"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="350dp" />

        <TextView
            android:id="@+id/text44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_you_had_a_tattoo_or_body_piercing_in_the_last_4_months"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="423dp" />

        <TextView
            android:id="@+id/text55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_women_are_you_pregnant_or_have_you_have_you_been_pregnant_in_the_past_12_months"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="487dp" />

        <TextView
            android:id="@+id/text66"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="491dp" />

    </LinearLayout>

    <Button
        android:id="@+id/bResponse"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="44dp"
        android:layout_marginTop="68dp"
        android:text="Respone"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
